added new pages

--- a/index.html
+++ b/index.html
@@ -60,29 +60,29 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav me-auto mb-2 mb-md-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="about.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sermons</a>
+                                <a class="nav-link" href="sermons.html">Sermons</a>
 
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Ministries</a>
+                                <a class="nav-link" href="ministries.html">Ministries</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Events</a>
+                                <a class="nav-link" href="events.html">Events</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Gallery</a>
+                                <a class="nav-link" href="gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">The Word</a>
+                                <a class="nav-link" href="theword.html">The Word</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
+                                <a class="nav-link" href="contactus.html">Contact Us</a>
                             </li>
                         </ul>
 
@@ -311,7 +311,7 @@
                         <div class="card h-100 rounded-0">
                             <img src="images/sermon.jpg" class="card-img-top h-100 rounded-0" alt="sermon">
                             <div class="card-img-overlay align-middle">
-                                <h5 class="mt-4 mb-4">By Pastor</h5>
+                                <h5 class="mt-4 mb-4">By Snr Pastor</h5>
                                 <p class="card-text mt-4 mb-4">Really Deve</p>
                                 <p class="card-text  mt-4 mb-4">
                                     <a class="btn watch-btn btn-sm"><i class="fa-solid fa-play"></i> WATCH</a>
@@ -327,7 +327,7 @@
                         <div class="card h-100 rounded-0">
                             <img src="images/sermon2.jpg" class="card-img-top h-100 rounded-0" alt="sermon1">
                             <div class="card-img-overlay align-middle">
-                                <h5 class="mt-4 mb-4">By Pastor</h5>
+                                <h5 class="mt-4 mb-4">By Snr Pastor</h5>
                                 <p class="card-text mt-4 mb-4">Really Deve</p>
                                 <p class="card-text  mt-4 mb-4">
                                     <a class="btn watch-btn btn-sm"><i class="fa-solid fa-play"></i> WATCH</a>
@@ -343,7 +343,7 @@
                         <div class="card h-100 rounded-0">
                             <img src="images/sermon3.jpg" class="card-img-top h-100 rounded-0" alt="sermon2">
                             <div class="card-img-overlay align-middle">
-                                <h5 class="mt-4 mb-4">By Pastor</h5>
+                                <h5 class="mt-4 mb-4">By Snr Pastor</h5>
                                 <p class="card-text mt-4 mb-4">Really Deve</p>
                                 <p class="card-text  mt-4 mb-4">
                                     <a class="btn watch-btn btn-sm"><i class="fa-solid fa-play"></i> WATCH</a>
@@ -359,7 +359,7 @@
                         <div class="card h-100 rounded-0">
                             <img src="images/sermon4.jpg" class="card-img-top h-100 rounded-0" alt="sermon4">
                             <div class="card-img-overlay align-middle">
-                                <h5 class="mt-4 mb-4">By Pastor</h5>
+                                <h5 class="mt-4 mb-4">By Snr Pastor</h5>
                                 <p class="card-text mt-4 mb-4">Really Deve</p>
                                 <p class="card-text  mt-4 mb-4">
                                     <a class="btn watch-btn btn-sm"><i class="fa-solid fa-play"></i> WATCH</a>
@@ -375,7 +375,7 @@
                         <div class="card h-100 rounded-0">
                             <img src="images/sermon5.jpg" class="card-img-top h-100 rounded-0" alt="sermon5">
                             <div class="card-img-overlay align-middle">
-                                <h5 class="mt-4 mb-4">By Pastor</h5>
+                                <h5 class="mt-4 mb-4">By Snr Pastor</h5>
                                 <p class="card-text mt-4 mb-4">Really Deve</p>
                                 <p class="card-text  mt-4 mb-4">
                                     <a class="btn watch-btn btn-sm"><i class="fa-solid fa-play"></i> WATCH</a>
@@ -391,7 +391,7 @@
                         <div class="card h-100 rounded-0">
                             <img src="images/sermon1.jpg" class="card-img-top h-100 rounded-0" alt="sermon6">
                             <div class="card-img-overlay align-middle">
-                                <h5 class="mt-4 mb-4">By Pastor</h5>
+                                <h5 class="mt-4 mb-4">By Snr Pastor</h5>
                                 <p class="card-text mt-4 mb-4">Really Deve</p>
                                 <p class="card-text  mt-4 mb-4">
                                     <a class="btn btn-sm watch-btn"><i class="fa-regular fa-play"></i> WATCH</a>
@@ -634,27 +634,35 @@
                             </div>
                             <div class="col-12 social-nav pb-3 border-0">
                                 <ul class="m-0">
-                                    <li><a href="https://facebook.com"><i
-                                                class="fa-brands fa-facebook-f p-3 text-light"></i></a>
+                                    <li>
+                                        <a href="https://facebook.com">
+                                            <i class="fa-brands fa-facebook-f p-3 text-light"></i>
+                                        </a>
                                     </li>
-                                    <li><a href="https://facebook.com"><i
-                                                class="fa-brands fa-twitter p-3 text-light"></i></a></li>
-                                    <li><a href="https://facebook.com"><i
-                                                class="fa-brands fa-youtube p-3 text-light"></i></a></li>
+                                    <li>
+                                        <a href="https://facebook.com">
+                                            <i class="fa-brands fa-twitter p-3 text-light"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://facebook.com">
+                                            <i class="fa-brands fa-youtube p-3 text-light"></i>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col pt-4">
                             <h4 class="text-light">About</h4>
                             <ul class="footer-links m-0 p-0">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#"> Sermons</a></li>
-                                <li><a href="#">Ministries</a></li>
-                                <li><a href="#">Events</a></li>
-                                <li><a href="#">Gallery</a></li>
-                                <li><a href="#">The Word</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="sermons.html"> Sermons</a></li>
+                                <li><a href="ministries.html">Ministries</a></li>
+                                <li><a href="events.html">Events</a></li>
+                                <li><a href="gallery.html">Gallery</a></li>
+                                <li><a href="theword.html">The Word</a></li>
+                                <li><a href="contactus.html">Contact</a></li>
                             </ul>
                         </div>
                         <div class="col pt-4">
