added new pages

--- a/ministries.html
+++ b/ministries.html
@@ -111,142 +111,184 @@
                 <div class="col-12">
                     <div class="row row-cols-3 row-cols-md-4 g-4">
                         <div class="col">
-                          <div class="card shadow">
+                          <div class="card ministry-card shadow">
                             <img src="images/lotw.jpg" class="card-img-top" alt="...">
                             <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                             <div class="card-body">
                               <h5 class="card-title text-blue">Light Of The World</h5>
                               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             </div>
+                            <div class="card-footer text-center">
+                              <a href="hospitality" class="text-blue">Read More</a>
+                          </div>
                           </div>
                         </div>
                         <div class="col">
-                          <div class="card shadow">
+                          <div class="card ministry-card shadow">
                             <img src="images/couples.jpg" class="card-img-top" alt="...">
                             <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                             <div class="card-body">
                               <h5 class="card-title text-blue">Couples Forum</h5>
                               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             </div>
+                            <div class="card-footer text-center">
+                              <a href="hospitality" class="text-blue">Read More</a>
+                          </div>
                           </div>
                         </div>
                         <div class="col">
-                          <div class="card shadow">
+                          <div class="card ministry-card shadow">
                             <img src="images/people.jpg" class="card-img-top" alt="...">
                             <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                             <div class="card-body">
                               <h5 class="card-title text-blue">Men`s Forum</h5>
                               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                             </div>
+                            <div class="card-footer text-center">
+                              <a href="hospitality" class="text-blue">Read More</a>
+                          </div>
                           </div>
                         </div>
                         <div class="col">
-                          <div class="card shadow">
+                          <div class="card ministry-card shadow">
                             <img src="images/people.jpg" class="card-img-top" alt="...">
                             <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                             <div class="card-body">
                               <h5 class="card-title text-blue">Women`s Forum</h5>
                               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             </div>
+                            <div class="card-footer text-center">
+                              <a href="hospitality" class="text-blue">Read More</a>
+                          </div>
                           </div>
                         </div>
                         <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Evangelism</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Intercession</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Praise and Worship</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Training and Administration</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Children`s Ministry</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Media and Publicity</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Welfare, Health & Compassion </h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Business</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">Logistics</h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                               </div>
+                              <div class="card-footer text-center">
+                                <a href="hospitality" class="text-blue">Read More</a>
+                            </div>
                             </div>
                           </div>
                           <div class="col">
-                            <div class="card shadow">
+                            <div class="card ministry-card shadow">
                               <img src="images/people.jpg" class="card-img-top" alt="...">
                               <img class="mx-auto card-logo" src="images/trc_mini_color.png" alt="trc logo" width="50" />
                               <div class="card-body">
                                 <h5 class="card-title text-blue">House Decoration & Hospitality </h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              </div>
+                              <div class="card-footer text-center">
+                                  <a href="hospitality" class="text-blue">Read More</a>
                               </div>
                             </div>
                           </div>
