added events and the word pages

--- a/index.html
+++ b/index.html
@@ -438,42 +438,52 @@
                     <div class="row mb-2">
                         <div class="col-12 col-sm-9 offset-sm-1 pb-4 pt-4">
                             <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text m-0"><small class="text-blue text-bold">Glorious Sunday</small>
+                                <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
+                                <div class="card-body shadow-sm">
+                                    <div class="event-calendar">
+                                        <p class="w-100 pt-2"><i
+                                                class="fa-regular fa-calendar text-gold icon-calendar"></i></p>
+                                        <p class="text-gold w-100">12 Jun</p>
+                                        <p class="bg-gold text-light w-100 p-0 m-0"><small>2022</small></p>
+                                    </div>
+                                    <p class="card-text mt-4">
+                                        <h5 class="text-blue text-bold">Light Of The World Youth Meeting</h5>
                                     </p>
                                     <p class="card-text m-0">
                                         <small class="text-muted d-flex justify-content-between">
-                                            <span class="text-gold"><i class="fa-regular fa-calendar text-blue"></i>
-                                                June 12,2022</span>
-                                            <span class="text-gold"><i class="fa-regular fa-clock text-blue"></i>
-                                                09:00am-14:00pm</span>
-                                            <span class="text-gold"><i class="fa-solid fa-location-dot text-blue"></i>
+                                            <span class="text-blue"><i class="fa-regular fa-clock text-gold"></i>
+                                                09:00 AM</span>
+                                            <span class="text-blue"><i class="fa-solid fa-location-dot text-gold"></i>
                                                 Hopley Assembly</span>
                                         </small>
                                     </p>
                                 </div>
-                                <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                             </div>
                         </div>
                     </div>
                     <div class="row mt-2">
                         <div class="col-12 col-sm-9 offset-sm-1  pb-4 ">
                             <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text m-0"><small class="text-blue text-bold">Couples Forum</small>
+                                <img src="images/people.jpg" class="card-img-bottom h-50" alt="fellowship">
+                                <div class="card-body shadow-sm">
+                                    <div class="event-calendar">
+                                        <p class="w-100 pt-2"><i
+                                                class="fa-regular fa-calendar text-gold icon-calendar"></i></p>
+                                        <p class="text-gold w-100">12 Jun</p>
+                                        <p class="bg-gold text-light w-100 p-0 m-0"><small>2022</small></p>
+                                    </div>
+                                    <p class="card-text mt-4">
+                                        <h5 class="text-blue text-bold">Glorious Sunday</h5>
                                     </p>
                                     <p class="card-text m-0">
                                         <small class="text-muted d-flex justify-content-between">
-                                            <span class="text-gold"><i class="fa-regular fa-calendar text-blue"></i>
-                                                June 12,2022</span>
-                                            <span class="text-gold"><i class="fa-regular fa-clock text-blue"></i>
-                                                09:00am-14:00pm</span>
-                                            <span class="text-gold"><i class="fa-solid fa-location-dot text-blue"></i>
+                                            <span class="text-blue"><i class="fa-regular fa-clock text-gold"></i>
+                                                09:00 AM</span>
+                                            <span class="text-blue"><i class="fa-solid fa-location-dot text-gold"></i>
                                                 Hopley Assembly</span>
                                         </small>
                                     </p>
                                 </div>
-                                <img src="images/people.jpg" class="card-img-bottom h-50" alt="fellowship">
                             </div>
                         </div>
                     </div>
