fixed navbar collapse issue

--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@
                 <div class="d-flex justify-content-around text-light  ">
                     <p class="m-0 pt-3 pb-3"><i class="fa-solid fa-location-dot"></i> Raylton Sports Club, Cnr 6th
                         Street and George Silundika Avenue, Harare</p>
-                    <ul class="m-0">
+                    <ul class="m-0 	d-none d-sm-block">
                         <li>
                             <a href="https://facebook.com"><i class="fa-brands fa-facebook-f p-3 text-light"></i></a>
                         </li>
@@ -45,17 +45,19 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-md fixed-top nav-transparent" id="navbar">
+        <nav class="navbar  navbar-expand-sm fixed-top nav-transparent" id="navbar">
             <div class="container-fluid ">
                 <div class="d-flex justify-content-around m-auto ">
                     <a class="navbar-brand" href="#">
                         <img src="images/trc_logo.png" alt="trc logo" width="140" class="img-default">
                         <img src="images/trc_blacktext.png" alt="trc logo" width="140" class="img-replace">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler text-light" id="navtoggle" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon">
+                            <i class="fa-solid fa-bars"></i>
+                        </span>                        
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -107,7 +109,7 @@
             <div class="row my-3 py-2">
                 <div class="col-12">
                     <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                             <div class="card">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body shadow-sm">
@@ -131,7 +133,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                             <div class="card">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
@@ -155,7 +157,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                             <div class="card">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
@@ -179,7 +181,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                             <div class="card">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
@@ -203,7 +205,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                             <div class="card">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
