--- a/ministries.html
+++ b/ministries.html
@@ -25,72 +25,75 @@
 </head>
 
 <body>
-    <header>
-        <div class="container-fluid fixed-top mb-1 social-nav" id="topnav">
-            <div class="row">
-                <div class="d-flex justify-content-around text-light  ">
-                    <p class="m-0 pt-3 pb-3"><i class="fa-solid fa-location-dot"></i> Raylton Sports Club, Cnr 6th
-                        Street and George Silundika Avenue, Harare</p>
-                    <ul class="m-0">
-                        <li>
-                            <a href="https://facebook.com"><i class="fa-brands fa-facebook-f p-3 text-light"></i></a>
+  <header>
+    <div class="container-fluid fixed-top mb-1 social-nav" id="topnav">
+        <div class="row">
+            <div class="d-flex justify-content-around text-light  ">
+                <p class="m-0 pt-3 pb-3"><i class="fa-solid fa-location-dot"></i> Raylton Sports Club, Cnr 6th
+                    Street and George Silundika Avenue, Harare</p>
+                <ul class="m-0 	d-none d-sm-block">
+                    <li>
+                        <a href="https://facebook.com"><i class="fa-brands fa-facebook-f p-3 text-light"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com"><i class="fa-brands fa-twitter p-3 text-light"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com"><i class="fa-brands fa-youtube p-3 text-light"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <nav class="navbar  navbar-expand-sm fixed-top nav-transparent" id="navbar">
+        <div class="container-fluid ">
+            <div class="d-flex justify-content-around m-auto ">
+                <a class="navbar-brand" href="#">
+                    <img src="images/trc_logo.png" alt="trc logo" width="140" class="img-default">
+                    <img src="images/trc_blacktext.png" alt="trc logo" width="140" class="img-replace">
+                </a>
+                <button class="navbar-toggler text-light" id="navtoggle" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">
+                        <i class="fa-solid fa-bars"></i>
+                    </span>                        
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li>
-                            <a href="https://facebook.com"><i class="fa-brands fa-twitter p-3 text-light"></i></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
-                        <li>
-                            <a href="https://facebook.com"><i class="fa-brands fa-youtube p-3 text-light"></i></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sermons.html">Sermons</a>
+
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ministries.html">Ministries</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="events.html">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="theword.html">The Word</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contactus.html">Contact Us</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-md fixed-top nav-transparent" id="navbar">
-            <div class="container-fluid ">
-                <div class="d-flex justify-content-around m-auto ">
-                    <a class="navbar-brand" href="#">
-                        <img src="images/trc_logo.png" alt="trc logo" width="140" class="img-default">
-                        <img src="images/trc_blacktext.png" alt="trc logo" width="140" class="img-replace">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="sermons.html">Sermons</a>
+    </nav>
+</header>
 
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="ministries.html">Ministries</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="events.html">Events</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="theword.html">The Word</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contactus.html">Contact Us</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
 
     <main>
         <div class="text-center bg-ministries">
