--- a/ministries.html
+++ b/ministries.html
@@ -385,26 +385,7 @@
 
 
     <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
-
-    <script type="text/javascript">
-        function scrollUp() {
-            const scrollUp = document.getElementById('topnav');
-            const nav = document.getElementById('navbar');
-            //    When the scroll is higher than 50 viewport, add the hide-topbar class to the topbar div.
-            if (this.scrollY >= 50) {
-                scrollUp.classList.add('d-none');
-                nav.classList.add('trc-navbar');
-                nav.classList.remove('nav-transparent');
-            }
-            else {
-                scrollUp.classList.remove('d-none');
-                nav.classList.add('nav-transparent');
-                nav.classList.remove('trc-navbar');
-
-            }
-        }
-        window.addEventListener('scroll', scrollUp)
-    </script>
+    <script src="js/custom.js" type="text/javascript"></script>
 
 
 </body>
