updated trc images

--- a/events.html
+++ b/events.html
@@ -110,7 +110,7 @@
                 <div class="col-12">
                     <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
                         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body shadow-sm">
                                     <div class="event-calendar">
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
                                     <div class="event-calendar">
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
                                     <div class="event-calendar">
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
                                     <div class="event-calendar">
@@ -206,7 +206,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body">
                                     <div class="event-calendar">
