--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                     Events
                                 </h1> <br />
                                 <p class="card-text mt-4 mb-4">
-                                    <a class="btn event-btn text-blue">View Latest Events</a>
+                                    <a class="btn event-btn text-blue" href="events.html">View Latest Events</a>
                                 </p>
                             </div>
                         </div>
@@ -439,7 +439,7 @@
                 <div class="col-12 col-sm-6">
                     <div class="row mb-2">
                         <div class="col-12 col-sm-9 offset-sm-1 pb-4 pt-4">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/forum.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body shadow-sm">
                                     <div class="event-calendar">
@@ -465,7 +465,7 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col-12 col-sm-9 offset-sm-1  pb-4 ">
-                            <div class="card">
+                            <div class="card bg-blue-light">
                                 <img src="images/people.jpg" class="card-img-bottom h-50" alt="fellowship">
                                 <div class="card-body shadow-sm">
                                     <div class="event-calendar">
