--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
        <div class="container">
         <div class="row">
             <div class="col-12 col-sm-6">
-                <img class="img-responsive" alt="pastor`s image" width="100" src=""/>
+                <img class="img-responsive" alt="pastor`s image" width="100" src="images/senior_pastor.jpg"/>
             </div>
             <div class="col-12 col-sm-6">
                <div class="row">
